# esp32c3-crypto

esp-32c3-crypto/: Cargo.toml  rust-toolchain.toml
esp-32c3-crypto/src/: error.rs  lib.rs  traits.rs  utils.rs
esp-32c3-crypto/src/hash/: sha.rs
esp-32c3-crypto/src/padding/: mod.rs  pkcs1v15.rs
esp-32c3-crypto/src/rsa/: mod.rs  private_key.rs  publick_key.rs
tests/: Cargo.toml  test_file.txt  test_file.txt.sign_1024_sha1  test_file.txt.sign_1024_sha224
tests/encryptions/: test_file.enc_1024  test_file.enc_2048
tests/keys/: create_keys.sh  decrypted.sha256.sign  private_key_1024.der  private_key_1024.pem  private_key_2048.der  private_key_2048.pem  private_key_4096.der  private_key_4096.pem  public_key_1024.der  public_key_2048.der  public_key_4096.der  sha256.sign
tests/signatures/: test_file.txt.sign_1024_sha256  test_file.txt.sign_2048_sha1  test_file.txt.sign_2048_sha224  test_file.txt.sign_2048_sha256
tests/src/: main.rs  test_b64_key_parsing.rs  test_encryption.rs  test_hash.rs  test_key_parsing.rs  test_signature.rs
