[package]
name = "esp-32c3-crypto"
version = "0.1.0"
authors = ["jones"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.19.0", features = [ "esp32c3" ] }
log = { version = "0.4.21" }

paste = "1.0.15"

crypto-bigint = { version = "0.5.5", default-features = false }
der = { version = "0.7.9" }
pkcs8 = { version = "0.10.2" }
pkcs1 = { version = "0.7.5" }
spki = { version = "0.7.3" }
heapless = "0.8.0"
zeroize = { version = "1.8.1", default-features = false, features = ["derive"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
